T/traefik-yJmKXO5pJ/traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-traefik
  labels:
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.20.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
  annotations: null
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: release-name
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 0
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9100"
      labels:
        app.kubernetes.io/name: traefik
        helm.sh/chart: traefik-10.20.1
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: false
      containers:
        - image: traefik:2.7.0
          imagePullPolicy: IfNotPresent
          name: release-name-traefik
          resources: null
          readinessProbe:
            httpGet:
              path: /ping
              port: 9000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - name: metrics
              containerPort: 9100
              protocol: TCP
            - name: traefik
              containerPort: 9000
              protocol: TCP
            - name: web
              containerPort: 8000
              protocol: TCP
            - name: websecure
              containerPort: 8443
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          args:
            - --global.checknewversion
            - --global.sendanonymoususage
            - --entrypoints.metrics.address=:9100/tcp
            - --entrypoints.traefik.address=:9000/tcp
            - --entrypoints.web.address=:8000/tcp
            - --entrypoints.websecure.address=:8443/tcp
            - --api.dashboard=true
            - --ping=true
            - --metrics.prometheus=true
            - --metrics.prometheus.entrypoint=metrics
            - --providers.kubernetescrd
            - --providers.kubernetesingress
      volumes:
        - name: data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
      securityContext:
        fsGroup: 65532
---
apiVersion: v1
kind: List
metadata:
  name: release-name-traefik
items:
  - apiVersion: v1
    kind: Service
    metadata:
      name: release-name-traefik
      labels:
        app.kubernetes.io/name: traefik
        helm.sh/chart: traefik-10.20.1
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: release-name
      annotations: null
    spec:
      type: LoadBalancer
      selector:
        app.kubernetes.io/name: traefik
        app.kubernetes.io/instance: release-name
      ports:
        - port: 80
          name: web
          targetPort: web
          protocol: TCP
        - port: 443
          name: websecure
          targetPort: websecure
          protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: release-name-traefik-dashboard
  annotations:
    helm.sh/hook: post-install,post-upgrade
  labels:
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.20.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
spec:
  entryPoints:
    - traefik
  routes:
    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
